# privacy-mask

./: .clawhubignore  .gitignore  CLAUDE.md  README.md  README.zh.md  SKILL.md  config.json  marketplace.json  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/hooks/: mask-images.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  new-rule.yml
.github/workflows/: ci.yml  publish.yml
hooks/: hooks.json
mask_engine/: __init__.py  bbox.py  cli.py  config.py  detector.py  fonts.py  masker.py  ner.py  ocr.py  pipeline.py
mask_engine/data/: config.json  hook.sh
mask_engine/ocr/: __init__.py  _types.py  merge.py  rapidocr_engine.py  tesseract.py
references/: README.md
scripts/: benchmark.py  generate_test_images.py  mask-images.sh  mask_image.py  preview_detections.py
skills/privacy-mask/: SKILL.md
tests/: test_detector.py  test_masker.py  test_ner.py  test_ocr.py  test_pipeline.py
